Some activity type mocks are now shown in dashboard

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,3 +56,7 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
 
 dashboard.page.title = Dashboard
+
+activity.type.CREATE_CARD=added
+dashboard.activity.title=Activity stream
+dashboard.todo.title=Next steps
