improve activity board

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,5 +58,6 @@ typeMismatch=Property {0} is type-mismatched
 dashboard.page.title = Dashboard
 
 activity.type.CREATE_CARD=added
+activity.type.UPDATE_CARD=updated
 dashboard.activity.title=Activity stream
 dashboard.todo.title=Next steps
